# signal-extraction

./: AliHFInvMassFitter.cxx  CMakeLists.txt  FitXicZerotoXiPiInvMass.C  README.md
macro/: CMakeLists.txt  FitXicZerotoXiPiInvMass.C  FitXicZerotoXiPiInvMass1.C  FitXicZerotoXiPiInvMass2.C  compare_root_alice.C  crystal_ball.C  plot_spectra_all.cpp  plot_tools.C  root_vs_alice_newer_version.C  systematics_2M.C  systematics_approach_2M.C  systematics_approach_2M_alice_dscb.C  systematics_approach_2M_alice_dscb_dataframe.C  systematics_approach_2M_crystall_ball.C  test.cpp  total_mass_fit.C
src/: AliHFInvMassFitter.cxx  AliHFInvMassFitter.h  AliHFMassFitter.cxx  AliVertexingHFUtils.h  CMakeLists.txt  SignalExtractionLinkDef.h
